--- a/views/matches/index.html.ejs
+++ b/views/matches/index.html.ejs
@@ -26,7 +26,7 @@
             <img src="https://i.ibb.co/DWpvvhk/sparring.jpg" alt="sparring" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="https://i.ibb.co/mHxpbnL/wrappinghands.jpg" alt="wrapping hands" class="d-block w-100">
+            <img src="https://i.ibb.co/cDjGhVn/sticksparring.jpg" alt="escrima sparring" class="d-block w-100">
           </div>
           <div class="carousel-item">
             <img src="https://i.ibb.co/mNK30HM/clinch.jpg" alt="clinch" class="d-block w-100">
