--- a/public/main.css
+++ b/public/main.css
@@ -205,7 +205,7 @@ footer a {
 }
 
 .img3 {
-  background-image: url("https://i.ibb.co/HdtrjfK/sidekick.jpg");
+  background-image: url("https://i.ibb.co/gdtw8Rq/sidekick.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -221,11 +221,11 @@ footer a {
 }
 
 .img1, .img3 {
-  width: 23%;
+  width: 24%;
   filter: grayscale(100%);
 }
 
 .img2 {
-  width: 49%;
+  width: 50%;
   padding: 0;
 }
