--- a/views/workouts/index.html.ejs
+++ b/views/workouts/index.html.ejs
@@ -13,8 +13,52 @@
           <div class="img2"></div>
           <div class="img3"></div>
         </div>
-      <h3>Found a partner and need some workout ideas?</h3>
-    </div>
+        <div class="workout-text">
+          <h4>Found a partner and need some workout ideas? Look no further.</h4>
+          <p>Besides the simple pad holding, sparring, or drills you and your partner may want to try out the following exercises to improve your conditioning.</p>
+        </div>
+        <div class="cards-container">
+          <div class="card workout-card h-100">
+            <div class="card-header">The Wheelbarrow</div>
+            <div class="card-body">
+              <p>Partner 1, set up in push-up position. Partner 2, standing behind your partner's feet, lift up Partner 1's legs and secure them by your hips. Partner 1 walks his/hers hands forward while Partner 2 follows holding Partner 1's legs. After you've reached your destination, switch.</p>
+            </div>
+          </div>
+          <div class="card workout-card h-100">
+            <div class="card-header">Push-Up & Shoulder Tap</div>
+            <div class="card-body">
+              <p>Both partners start in high plank position. Both perform a push-up. At the top of your push-up, lift right hand to tap your partner's left shoulder (the shoulder of the non-extended hand). Repeat, alternating the shoulder you tap.</p>
+            </div>
+          </div>
+          <div class="card workout-card h-100">
+            <div class="card-header">Sprint & Sit</div>
+            <div class="card-body">
+              <p>Partner 1 starts with his/her back against the wall, feet shoulder-width apart and goes into a wall sit (thighs parallel to ground and knees above the ankles). Partner 2 sprints to destination and back. Partners then switch positions and repeat.</p>
+            </div>
+          </div>
+          <div class="card workout-card h-100">
+            <div class="card-header">Medicine Ball Sit-Up & Pass</div>
+            <div class="card-body">
+              <p>Both partners lie faceup, knees bent, feet flat on the floor, with ankles overlapping. Partner 1 sits up to face Partner 2, bringing arms and medicine ball up. At the same time, Partner 2 performs a sit-up. Partner 1 hands the ball to Partner 2. As both partners lower, Partner 2 taps ball on the floor behind head before sitting up and passing the ball back.</p>
+            </div>
+          </div>
+          <div class="card workout-card h-100">
+            <div class="card-header">Resistance Band Sprint</div>
+            <div class="card-body">
+              <p>Partner 1 adjusts a long resistance band around waist. Partner 2 stands behind Partner 1 and grips the band in front. Person 1 powers forward into a sprint, with Partner 2 determining the amount of resistance given by adjusting the grip on the band and the distance between the partners. Switch! The partner in front can move forwards, backwards, or laterally.</p>
+            </div>
+          </div>
+          <div class="card workout-card h-100">
+            <div class="card-header">Leg Lifts</div>
+            <div class="card-body">
+              <p>Partner 1 lies on back. Partner 2 stands just behind Partner 1's head. Partner 1 holds Partner 2's ankles while completing a leg lift. At the top of the lift, Partner 2 pushes Partner 1's legs down. Partner 1 lowers legs without touching the ground.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
     <footer class="page-footer">
         <%- include('../partials/footer.html.ejs') %>
     </footer>
