--- a/views/partials/nav.html.ejs
+++ b/views/partials/nav.html.ejs
@@ -10,6 +10,7 @@
       <li class="nav-item active"><a class="nav-link" href="/home">HOME <span class="sr-only">(current)</span></a></li>
       <li class="nav-item"><a class="nav-link" href="/offers">OFFERS</a></li>
       <li class="nav-item"><a class="nav-link" href="/searches">SEARCHES</a></li>
+      <li class="nav-item"><a class="nav-link" href="/workouts">WORKOUTS</a></li>
       <li class="nav-item"><a class="nav-link" href="https://fightingfit.herokuapp.com/workouts" target="_blank">FIGHTING FIT</a></li>
     </div>
   </div>
