styling workouts pg

--- a/views/workouts/index.html.ejs
+++ b/views/workouts/index.html.ejs
@@ -14,8 +14,8 @@
           <div class="img3"></div>
         </div>
         <div class="workout-text">
-          <h4>Found a partner and need some workout ideas? Look no further.</h4>
-          <p>Besides the simple pad holding, sparring, or drills you and your partner may want to try out the following exercises to improve your conditioning.</p>
+          <h4>Found a partner and need some workout ideas?<br/>Kick it up a notch!</h4>
+          <h5>Besides the simple pad holding, sparring, or drills you and your partner may want to try out the following exercises to improve your conditioning.</h5>
         </div>
         <div class="cards-container">
           <div class="card workout-card h-100">
