--- a/views/workouts/index.html.ejs
+++ b/views/workouts/index.html.ejs
@@ -14,8 +14,9 @@
           <div class="img3"></div>
         </div>
         <div class="workout-text">
-          <h4>Found a partner and need some workout ideas?<br/>Kick it up a notch!</h4>
-          <h5>Besides the simple pad holding, sparring, or drills you and your partner may want to try out the following exercises to improve your conditioning.</h5>
+          <h4>Found a partner and need some workout ideas?</h4>
+          <h3>Kick it up a notch!</h3>
+          <h5>Besides the simple pad holding, sparring, or drills, you and your partner may want to try out the following exercises to improve your conditioning.</h5>
         </div>
         <div class="cards-container">
           <div class="card workout-card h-100">
@@ -25,7 +26,7 @@
             </div>
           </div>
           <div class="card workout-card h-100">
-            <div class="card-header">Push-Up & Shoulder Tap</div>
+            <div class="card-header">Push-Up & Tap</div>
             <div class="card-body">
               <p>Both partners start in high plank position. Both perform a push-up. At the top of your push-up, lift right hand to tap your partner's left shoulder (the shoulder of the non-extended hand). Repeat, alternating the shoulder you tap.</p>
             </div>
