working on user auth

--- a/views/users/register.html.ejs
+++ b/views/users/register.html.ejs
@@ -10,6 +10,10 @@
         <form action="/register" method="POST">
            <p>Username: 4-16 characters, a-Z, 0-9, underscores, and dashes</p>
            <p>Pasword: 8-128 characters, REQUIRES 1 lowercase, uppercase, and digit</p>
+           <label for="first_name">First Name: </label>
+           <input type="text" id="first_name" name="first_name" autofocus> <br />
+           <label for="last_name">Last Name: </label>
+           <input type="text" id="last_name" name="last_name" autofocus> <br />
            <label for="username">Username: </label>
            <input type="text" id="username" name="username" autofocus> <br />
            <label for="password">Password: </label>
