--- a/public/main.css
+++ b/public/main.css
@@ -246,3 +246,44 @@ footer a {
   width: 32%;
   margin-bottom: 1em;
 }
+
+#mobile-display {
+  display: none;
+}
+
+@media (max-width: 375px) {
+  #mobile-display {
+    display: block;
+  }
+  .mobile-workout-container {
+    background-image: url("https://i.ibb.co/C6s3R1q/autumnjose.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 350px;
+    height: 300px;
+  }
+
+  .workout-container {
+    display: none;
+  }
+
+  .cards-container {
+    display: block;
+  }
+  .card {
+    width: 100%;
+    margin-bottom: 1em;
+  }
+  .footer1 {
+    padding: 2em 0 0 0;
+  }
+  .fa {
+    padding: 2em 0 0 0;
+  }
+  input {
+    width: 120px;
+  }
+  .new-form {
+    padding: 0;
+  }
+}
