--- a/views/workouts/index.html.ejs
+++ b/views/workouts/index.html.ejs
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head.html.ejs') %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <!-- NAV -->
@@ -12,6 +13,9 @@
           <div class="img1"></div>
           <div class="img2"></div>
           <div class="img3"></div>
+        </div>
+        <div id="mobile-display">
+          <div class="mobile-workout-container"></div>
         </div>
         <div class="workout-text">
           <hr/>
