--- a/views/searches/index.html.ejs
+++ b/views/searches/index.html.ejs
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head.html.ejs') %>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <!-- NAV -->
@@ -12,6 +13,7 @@
       <div class="searches">
         <div class="search-data">
           <h3>Search Listings</h3>
+          <div class="table-responsive">
           <table class="table table-bordered table-hover">
             <thead class="thead-dark">
               <tr>
@@ -34,6 +36,7 @@
               <% } %>
             </tbody>
           </table>
+        </div>
           </div>
 
           <div class="form-container">
