removing user auth to test heroku

--- a/public/main.css
+++ b/public/main.css
@@ -292,4 +292,12 @@ footer a {
     height: 50px;
   }
 
+  .edit-card {
+    margin: 2em;
+  }
+
+  .edit-card img {
+    max-width: 250px;
+  }
+
 }
