--- a/views/offers/show.html.ejs
+++ b/views/offers/show.html.ejs
@@ -7,8 +7,8 @@
     <!-- NAV -->
       <%- include('../partials/nav.html.ejs') %>
       <!-- MAIN -->
-  <div class="card edit-card" style="width: 600px";>
-  <div class="card-body">
+  <div class="card edit-card">
+  <div class="card-body edit-card-body">
     <h4>Name:</h4>
     <h5><%=offer.rows[0].firstname%>   <%=offer.rows[0].lastname%></h5>
     <h4>Age:</h4>
