--- a/views/partials/nav.html.ejs
+++ b/views/partials/nav.html.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #151515">
+<nav id="desktop-display" class="navbar navbar-expand-lg navbar-dark" style="background-color: #151515">
   <a class="navbar-brand" href="/home">
   <img src='https://i.ibb.co/gTJTpzp/INVERTED-FIGHTING-FIT.jpg'>
   </a>
@@ -7,10 +7,28 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <li class="nav-item active"><a class="nav-link" href="/home">HOME <span class="sr-only">(current)</span></a></li>
+      <li class="nav-item active"><a class="nav-link" href="/home">HOME<span class="sr-only">(current)</span></a></li>
       <li class="nav-item"><a class="nav-link" href="/offers">OFFERS</a></li>
       <li class="nav-item"><a class="nav-link" href="/searches">SEARCHES</a></li>
       <li class="nav-item"><a class="nav-link" href="/workouts">WORKOUTS</a></li>
+      <li class="nav-item"><a class="nav-link" href="https://fightingfit.herokuapp.com/workouts" target="_blank">FIGHTING FIT</a></li>
+    </div>
+  </div>
+</nav>
+
+<nav id="mobile-display" class="navbar navbar-expand-lg navbar-dark" style="background-color: #151515">
+  <a class="navbar-brand" href="/home">
+  <img src='https://i.ibb.co/gTJTpzp/INVERTED-FIGHTING-FIT.jpg'>
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <li class="nav-item active"><a class="nav-link" href="/home"><i class="fas fa-home"></i><span class="sr-only">(current)</span></a></li>
+      <li class="nav-item"><a class="nav-link" href="/offers"><i class="fas fa-hands"></i></a></li>
+      <li class="nav-item"><a class="nav-link" href="/searches"><i class="fas fa-search"></i></a></li>
+      <li class="nav-item"><a class="nav-link" href="/workouts"><i class="fas fa-dumbbell"></i></a></li>
       <li class="nav-item"><a class="nav-link" href="https://fightingfit.herokuapp.com/workouts" target="_blank">FIGHTING FIT</a></li>
     </div>
   </div>
