--- a/views/searches/show.html.ejs
+++ b/views/searches/show.html.ejs
@@ -7,7 +7,7 @@
       <!-- NAV -->
         <%- include('../partials/nav.html.ejs') %>
         <!-- MAIN -->
-  <div class="card edit-card" style="width: 600px";>
+  <div class="card edit-card">
     <div class="card-body">
     <h4>Name: </h4>
     <h5><%=search.rows[0].fname%>   <%=search.rows[0].lname%></h5>
