--- a/views/home/index.html.ejs
+++ b/views/home/index.html.ejs
@@ -19,6 +19,7 @@
       <!-- MAIN -->
       <div class="banner">
         <h1>Fighting Fit Meetup</h1>
+        <h3>find fellow fighters</h3>
         <h3>brought to you by the founder of Fighting Fit</h3>
       </div>
       <!-- STATIC STUFF -->
