--- a/views/partials/nav.html.ejs
+++ b/views/partials/nav.html.ejs
@@ -11,6 +11,7 @@
       <li class="nav-item"><a class="nav-link" href="/offers">OFFERS</a></li>
       <li class="nav-item"><a class="nav-link" href="/searches">SEARCHES</a></li>
       <li class="nav-item"><a class="nav-link" href="/workouts">WORKOUTS</a></li>
+      <li class="nav-item"><a class="nav-link" href="/login">LOG IN</a></li>
       <li class="nav-item"><a class="nav-link" href="https://fightingfit.herokuapp.com/workouts" target="_blank">FIGHTING FIT</a></li>
     </div>
   </div>
