--- a/views/partials/nav.html.ejs
+++ b/views/partials/nav.html.ejs
@@ -11,7 +11,17 @@
       <li class="nav-item"><a class="nav-link" href="/offers">OFFERS</a></li>
       <li class="nav-item"><a class="nav-link" href="/searches">SEARCHES</a></li>
       <li class="nav-item"><a class="nav-link" href="/workouts">WORKOUTS</a></li>
-      <li class="nav-item"><a class="nav-link" href="/login">LOG IN</a></li>
+      <!-- <li class="nav-item"><a class="nav-link" href="/login">LOG IN</a></li> -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          USERS
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="/register">SIGN UP</a>
+          <a class="dropdown-item" href="/login">SIGN IN</a>
+          <a class="dropdown-item" href="/logout">LOG OUT</a>
+        </div>
+      </li>
       <li class="nav-item"><a class="nav-link" href="https://fightingfit.herokuapp.com/workouts" target="_blank">FIGHTING FIT</a></li>
     </div>
   </div>
