--- a/views/partials/nav.html.ejs
+++ b/views/partials/nav.html.ejs
@@ -40,6 +40,8 @@
       <li class="nav-item"><a class="nav-link" href="/offers"><i class="fas fa-hands"></i></a></li>
       <li class="nav-item"><a class="nav-link" href="/searches"><i class="fas fa-search"></i></a></li>
       <li class="nav-item"><a class="nav-link" href="/workouts"><i class="fas fa-dumbbell"></i></a></li>
+      <li class="nav-item"><a class="nav-link" href="/login"><i class="fas fa-user"></i></a></li>
+      <li class="nav-item"><a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i></a></li>
       <li class="nav-item"><a class="nav-link" href="https://fightingfit.herokuapp.com/workouts" target="_blank">FIGHTING FIT</a></li>
     </div>
   </div>
