--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -74,7 +74,7 @@
 
 
 
-    <button type="button" name="button" class="match-btn btn-block"><a href="/matches"><i class="fab fa-searchengin fa-2x"> MATCHES</i></a></button>
+    <button type="button" name="button" class="match-btn btn-block"><a href="/matches"><i class="fas fa-search fa-2x"> MATCHES</i></a></button>
 <!-- CLOSING OUT CONTAINER DIV -->
     </div>
 <!-- FOOTER -->
