--- a/views/searches/index.html.ejs
+++ b/views/searches/index.html.ejs
@@ -64,7 +64,7 @@
 
 
           </div>
-        <button type="button" name="button" class="match-btn btn-block"><a href="/matches"><i class="fab fa-searchengin fa-2x"> MATCHES</i></a></button>
+        <button type="button" name="button" class="match-btn btn-block"><a href="/matches"><i class="fas fa-search fa-2x"> MATCHES</i></a></button>
 
         </div>
 
