--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head.html.ejs') %>
+
   </head>
   <body>
     <!-- NAV -->
@@ -70,7 +71,12 @@
             <!-- CLOSING OUT OFFERS-DISPLAY -->
           </div>
 
+          <form class="searches-search">
+            <input type="text" name="get-searches" id="text-submit" placeholder="search listings" class="text-submit-searches"/>
 
+             <input type="submit" id="submit" value="VIEW LISTINGS" class="search-btn"/>
+             <button type="button" class="reset-btn">RESET LIST</button>
+          </form>
 
 
 
@@ -81,5 +87,7 @@
     <footer class="page-footer">
       <%- include('../partials/footer.html.ejs') %>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="/app.js"></script>
   </body>
 </html>
