--- a/views/partials/footer.html.ejs
+++ b/views/partials/footer.html.ejs
@@ -6,10 +6,11 @@
 </div>
 <div class=footer2>
   <img src='https://i.ibb.co/gTJTpzp/INVERTED-FIGHTING-FIT.jpg'> <br/>
-  COPYRIGHT <%=new Date().getFullYear();%> || Artist: <a href="https://www.linkedin.com/in/kellenchumley" target="_blank" className="footer-links">Kellen Chumley</a>
+  © <%=new Date().getFullYear();%>
 </div>
 <div class="footer3">
   <a href="#"> <i class="fa fa-facebook-official fa-2x" aria-hidden="true" target="_blank"></i></a>
   <a href="#"> <i class="fa fa-twitter fa-2x" aria-hidden="true" target="_blank"></i></a>
   <a href="#"> <i class="fa fa-instagram fa-2x" aria-hidden="true" target="_blank"></i></a>
+  <br/>Artist: <a href="https://www.linkedin.com/in/kellenchumley" target="_blank" className="footer-links">Kellen Chumley</a> <br/> <i class="fas fa-camera"></i> <a href="https://www.instagram.com/josecuaresmaphotography/" target="_blank" className="footer-links">: Jose Cuaresma</a>
 </div>
