--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head.html.ejs') %>
-
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="/app.js"></script>
   </head>
   <body>
     <!-- NAV -->
@@ -88,6 +89,6 @@
       <%- include('../partials/footer.html.ejs') %>
     </footer>
 
-        <script src="/app.js"></script>
+
   </body>
 </html>
