--- a/public/main.css
+++ b/public/main.css
@@ -252,6 +252,18 @@ footer a {
   display: none;
 }
 
+@media (min-width: 576px) and (max-width: 768px){
+  .new-form {
+    padding: 0;
+  }
+  input {
+    width: 95%;
+  }
+  .reset-btn {
+    width: 95%;
+  }
+}
+
 @media (max-width: 575px) {
   #desktop-display {
     display: none;
