--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <%- include('../partials/head.html.ejs') %>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="/app.js"></script>
+    <%- include('../partials/head.html.ejs') %>
+
+
   </head>
   <body>
     <!-- NAV -->
@@ -73,11 +74,12 @@
           </div>
 
           <form class="searches-search">
-            <input type="text" name="get-searches" id="text-submit" placeholder="search listings" class="text-submit-searches"/>
+            <input type="text" name="get-searches" id="text-submit" placeholder="search listings by city" class="text-submit-searches"/>
 
              <input type="submit" id="submit" value="VIEW LISTINGS" class="search-btn"/>
              <button type="button" class="reset-btn">RESET LIST</button>
           </form>
+          <main class="searches-main"></main>
 
 
 
@@ -89,6 +91,6 @@
       <%- include('../partials/footer.html.ejs') %>
     </footer>
 
-
+<script src="/app.js"></script>
   </body>
 </html>
