second AJAX call working

--- a/views/searches/index.html.ejs
+++ b/views/searches/index.html.ejs
@@ -61,6 +61,13 @@
               <!-- CLOSING OUT SEARCHES-DISPLAY -->
           </div>
 
+          <form class="offers-search">
+            <input type="text" name="get-offers" id="text-submit" placeholder="search listings by city" class="text-submit-searches"/>
+
+             <input type="submit" id="submit" value="VIEW LISTINGS" class="search-btn"/>
+             <button type="button" class="reset-btn">RESET LIST</button>
+          </form>
+          <main class="offers-main"></main>
 
 
           </div>
@@ -72,5 +79,6 @@
       <footer class="page-footer">
           <%- include('../partials/footer.html.ejs') %>
         </footer>
+        <script src="/app.js"></script>
   </body>
 </html>
