--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -41,7 +41,7 @@
               </tbody>
             </table>
           </div>
-          </div>
+          </div><hr/>
 
             <div class="form-container">
 
@@ -71,7 +71,7 @@
 
 
             <!-- CLOSING OUT OFFERS-DISPLAY -->
-          </div>
+          </div><hr/>
 
           <form class="searches-search">
             <input type="text" name="get-searches" id="text-submit" placeholder="search listings by city" class="text-submit-searches"/>
@@ -79,7 +79,7 @@
              <input type="submit" id="submit" value="VIEW LISTINGS" class="search-btn"/>
              <button type="button" class="reset-btn">RESET LIST</button>
           </form>
-          <main class="searches-main"></main>
+          <main class="searches-main"></main><hr/>
 
 
 
