--- a/views/searches/index.html.ejs
+++ b/views/searches/index.html.ejs
@@ -36,7 +36,7 @@
             </tbody>
           </table>
         </div>
-          </div>
+          </div><hr/>
 
           <div class="form-container">
 
@@ -59,7 +59,7 @@
                 </form>
               </div>
               <!-- CLOSING OUT SEARCHES-DISPLAY -->
-          </div>
+          </div><hr/>
 
           <form class="offers-search">
             <input type="text" name="get-offers" id="text-submit" placeholder="search listings by city" class="text-submit-searches"/>
@@ -67,7 +67,7 @@
              <input type="submit" id="submit" value="VIEW LISTINGS" class="search-btn"/>
              <button type="button" class="reset-btn">RESET LIST</button>
           </form>
-          <main class="offers-main"></main>
+          <main class="offers-main"></main><hr/>
 
 
           </div>
