--- a/views/workouts/index.html.ejs
+++ b/views/workouts/index.html.ejs
@@ -28,7 +28,7 @@
           <div class="card workout-card h-100">
             <div class="card-header">The Wheelbarrow</div>
             <div class="card-body">
-              <p>Partner 1, set up in push-up position. Partner 2, standing behind your partner's feet, lift up Partner 1's legs and secure them by your hips. Partner 1 walks his/hers hands forward while Partner 2 follows holding Partner 1's legs. After you've reached your destination, switch.</p>
+              <p>Partner 1 sets up in push-up position. Partner 2, standing behind partner's feet, lifts up Partner 1's legs and secures them by the hips. Partner 1 walks their hands forward while Partner 2 follows, holding Partner 1's legs. After you've reached your destination, switch.</p>
             </div>
           </div>
           <div class="card workout-card h-100">
