--- a/views/partials/head.html.ejs
+++ b/views/partials/head.html.ejs
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fighting Fit Meetup</title>
+<title>Fighting Fit Meetup | Meet Your Fellow Fighters</title>
 <!-- FONTS -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/v4-shims.css">
