--- a/views/partials/nav.html.ejs
+++ b/views/partials/nav.html.ejs
@@ -22,7 +22,7 @@
           <a class="dropdown-item" href="/logout">LOG OUT</a>
         </div>
       </li>
-      <li class="nav-item"><a class="nav-link" href="https://fightingfit.herokuapp.com target="_blank">FIGHTING FIT</a></li>
+      <li class="nav-item"><a class="nav-link" href="https://fightingfit.herokuapp.com" target="_blank">FIGHTING FIT</a></li>
     </div>
   </div>
 </nav>
