--- a/views/partials/nav.html.ejs
+++ b/views/partials/nav.html.ejs
@@ -42,7 +42,7 @@
       <li class="nav-item"><a class="nav-link" href="/workouts"><i class="fas fa-dumbbell"></i></a></li>
       <li class="nav-item"><a class="nav-link" href="/login"><i class="fas fa-user"></i></a></li>
       <li class="nav-item"><a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i></a></li>
-      <li class="nav-item"><a class="nav-link" href="https://fightingfit.herokuapp.com/workouts" target="_blank">FIGHTING FIT</a></li>
+      <li class="nav-item"><a class="nav-link" href="https://fightingfit.herokuapp.com" target="_blank">FIGHTING FIT</a></li>
     </div>
   </div>
 </nav>
